# boids_bevy

./: Cargo.toml
src/: boids.rs  frame_counter.rs  main.rs
